fixed z-index bug with .board element on page 1

--- a/style.css
+++ b/style.css
@@ -147,9 +147,8 @@ body {
 	display: block;
 	width: 80%;
 	color: #fff;
-	//border: 1px solid white;
 	font-size: 13px;
-	z-index: 500;
+	z-index: 10;
 	background: rgba(0,0,0,0.2);
 	padding: 5px;
 	//text-align: justify;
@@ -227,13 +226,14 @@ body {
 	transition: 1s cubic-bezier(1,.11,1,1.23);
 	width: 100%;
 }
+
 .active {
 	position: absolute;
 	left: 15%;
 	top: 50%;
 	transform: translate(0,-50%);
 	width: 65vh;
-	z-index: 10;
+	z-index: -10;
 }
 .active.stegosaurus {
 	top: 40%;
@@ -918,8 +918,9 @@ figure:hover span.center:before{
 @media screen and (max-width: 768px) and (orientation : portrait){
 
 /**************** MOBILE STYLES PAGE 1 **************************/
-.active {
+#page1 .active {
 	left: 4%;
+	z-index: -1;
 }
 #page1 footer {
 	position: absolute;
@@ -1060,6 +1061,7 @@ figure:hover span.center:before{
 	.active {
 		top: 40%;
 		transform: translate(0,-50%);
+		z-index: -1;
 	}
 	.active.stegosaurus {
 		top: 35%;
@@ -1072,6 +1074,9 @@ figure:hover span.center:before{
 /**************************************************************************/
 @media screen and (min-width: 769px) and (max-width: 992px) {
 /**************** TABLET STYLES PAGE 2 ************************/
+	#page1 .active {
+		z-index: -1;
+	}
 	#page2 {
 		height: auto;
 	}
